--- a/PedalParadise2/PedalParadise/Views/Account/Profile.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Account/Profile.cshtml
@@ -25,7 +25,7 @@
             <div class="card shadow-lg p-4">
                 <h1 class="h3 fw-bold text-dark mb-4">Profile Information</h1>
 
-                <form asp-action="UpdateProfile" method="post">
+                <form asp-action="Edit" asp-controller="Account" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
                     <div class="row g-3 mb-3">
