--- a/PedalParadise2/PedalParadise/Views/Products/Details.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Products/Details.cshtml
@@ -103,7 +103,7 @@
                                         }
                                     }
                                 </div>
-                                <span class="ml-2 text-gray-700">by @review.Client.User.FirstName @review.Client.User.LastName</span>
+                                <span class="ml-2 text-gray-700">by @review.Client.FirstName @review.Client.LastName</span>
                             </div>
                             <span class="text-gray-500 text-sm">@review.Date.ToString("MMMM dd, yyyy")</span>
                         </div>
