--- a/PedalParadise2/PedalParadise/Views/Shared/_dashboardPartial.cshtml
+++ b/PedalParadise2/PedalParadise/Views/Shared/_dashboardPartial.cshtml
@@ -9,22 +9,22 @@
             <hr />
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a asp-action="Orders" asp-controller="Admin" class="nav-link text-dark">
+                    <a asp-action="OrdersList" asp-controller="Order" class="nav-link text-dark">
                         <i class="bi bi-box-seam"></i> Orders
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a asp-action="Accounts" asp-controller="Admin" class="nav-link text-dark">
+                    <a asp-action="List" asp-controller="Account" class="nav-link text-dark">
                         <i class="bi bi-people"></i> Accounts
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a asp-action="Requests" asp-controller="Admin" class="nav-link text-dark">
+                    <a asp-action="List" asp-controller="Request" class="nav-link text-dark">
                         <i class="bi bi-list-check"></i> Requests
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a asp-action="Products" asp-controller="Admin" class="nav-link text-dark">
+                    <a asp-action="List" asp-controller="Products" class="nav-link text-dark">
                         <i class="bi bi-bicycle"></i> Products
                     </a>
                 </li>
